# my-tasks

./: .cursorrules  eslint.config.js  makefile  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1736923062758-673d68cddc022.mjs
src/: Tasks.tsx  (+5 more)
src-tauri/: .config.backup.toml  .config.toml  .gitignore  Cargo.toml  file.db  tauri.conf.json
src-tauri/migrations/: 20250119143626_initialise.sql  20250126065537_favorite_projects.sql  20250126172957_add_parent_task_id.sql  20250204164410_add_task_ticks.sql  20250303143812_remove_deadlines.sql  20250420000000_add_recurring_tasks.sql
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs  repository.rs
src-tauri/src/chart/: mod.rs  test.rs
src-tauri/src/chart/commands/: mod.rs
src-tauri/src/chart/manager/: mod.rs
src-tauri/src/chart/manager/queries/: load_project_activity_stats.rs  mod.rs  (+1 more)
src-tauri/src/chart/tauri/: actions.rs
src-tauri/src/configuration/: commands.rs  manager.rs  mod.rs  test.rs
src-tauri/src/configuration/tauri/: actions.rs
src-tauri/src/ollama/: mod.rs  tauri.rs
src-tauri/src/project/: commands.rs  detail.rs  manager.rs  mod.rs  repository.rs  test.rs
src-tauri/src/project/tauri/: actions.rs  queries.rs
src-tauri/src/recurring_task/: manager.rs  mod.rs  repository.rs
src-tauri/src/recurring_task/tauri/: actions.rs  mod.rs  queries.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/task/: commands.rs  manager.rs  mod.rs  repository.rs  test.rs
src-tauri/src/task/commands/: mod.rs
src-tauri/src/task/tauri/: actions.rs  mod.rs  queries.rs
(+92 files in other folders)
